--- a/style.css
+++ b/style.css
@@ -35,6 +35,18 @@ p{
 .section-m1{
     margin: 40px 0;
 }
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #000;
+    background-color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    transition: 0.5s;
+}
 body{
     width: 100%;
 }
@@ -449,4 +461,163 @@ button.white{
     color: #ff690c;
     font-weight: 800;
     font-size: 15px;
+}
+#newsletter{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    background-image: url("img/banner/b14.png");
+    background-repeat: no-repeat;
+    background-position: 20% 30%;
+    background-color: #041E42;
+}
+#newsletter h4{
+    font-size: 22px;
+    font-weight: 700;
+    color: #fff;
+}
+#newsletter p{
+    font-size: 14px;
+    font-weight: 600;
+    color: #818EA0;
+}
+#newsletter p span{
+    color: #ee4c11;
+}
+#newsletter .form{
+    display: flex;
+    width: 40%;
+}
+#newsletter input{
+    height: 3.125rem;
+    padding: 0 1.25rem;
+    font-size: 14px;
+    width: 100%;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    outline: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    
+}
+#newsletter button{
+    background-color: #086981;
+    color: #fff;
+    white-space: nowrap;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+footer{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+footer .col{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+footer .logo{
+    margin-bottom: 30px;
+}
+footer h4{
+    font-size: 14px;
+    padding-bottom: 20px;
+}
+footer p{
+    font-size: 13px;
+    margin: 0 0 8px 0;
+}
+footer a{
+    font-size: 13px;
+    text-decoration: none;
+    color: #222;
+    margin-bottom: 10px;
+}
+footer .follow{
+    margin-top: 20px;
+}
+footer .follow i{
+    padding-right: 4px;
+    cursor: pointer;
+}
+footer .follow #face:hover{
+    color: #1877F2;
+}
+footer .follow #pin:hover{
+    color: #C8232C;
+}
+footer .follow #twi:hover{
+    color: #1DA1F2;
+}
+footer .follow #insta:hover{
+    color: #C13584;
+}
+footer .follow #yt:hover{
+    color: #ff000d;
+} */
+
+footer .install .row img{
+    border: 1px solid #088178;
+    border-radius: 5px;
+    cursor: pointer;
+}
+footer .install img{
+    margin: 10px 0 15px 0;
+}
+footer a:hover{
+    color: #ff0000;
+}
+footer .copyright{
+    width: 100%;
+    text-align: center;
+}
+#tab a{
+    color: #000;
+}
+#tab{
+    display: none;
+    align-items: center;
+}
+@media (max-width:799px){
+    #navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: fixed;
+        top: 0;
+        right: -300px;
+        height: 100vh;
+        width: 300px;
+        background-color: #E3E6F3;
+        box-shadow: 0 40px 60px rgba(0, 0, 0, 0.01);
+        padding: 80px 0 0 10px;
+        transition: 0.5s;
+    }
+    #navbar li{
+        margin-bottom: 25px;
+    }
+    #navbar.active{
+        right: 0px;
+    }
+    #tab{
+        display: flex;
+        align-items: center;
+    }
+    #tab i{
+        color: #1a1a1a;
+        font-size: 24px;
+        padding-left: 20px;
+    }
+    #close{
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+        font-size: 24px;
+    }
 }
