--- a/style.css
+++ b/style.css
@@ -568,6 +568,10 @@ footer .install .row img{
 footer .install img{
     margin: 10px 0 15px 0;
 }
+footer .install img:hover{
+    border: 1px solid #000;
+    border-radius: 5px;
+}
 footer a:hover{
     color: #ff0000;
 }
@@ -582,7 +586,13 @@ footer .copyright{
     display: none;
     align-items: center;
 }
+#close{
+    display: none;
+}
 @media (max-width:799px){
+    .section-p1 {
+        padding: 40px 40px;
+    }
     #navbar {
         display: flex;
         flex-direction: column;
@@ -604,6 +614,9 @@ footer .copyright{
     #navbar.active{
         right: 0px;
     }
+    #navbar.inactive{
+        right: -300px;
+    }
     #tab{
         display: flex;
         align-items: center;
@@ -614,10 +627,115 @@ footer .copyright{
         padding-left: 20px;
     }
     #close{
+        display: initial;
         position: absolute;
         top: 30px;
         left: 30px;
         color: #222;
         font-size: 24px;
+    }
+    #lg-bag{
+        display: none;
+    }
+    #heroFrame {
+        height: 90vh;
+        padding: 0 80px;
+        background-position: top 30% right 30%;
+    }
+    #feature {
+        justify-content: center;
+    }
+    #feature .fe-box {
+        margin: 15px 15px;
+    }
+    #product1 .pro-container {
+        justify-content: center;
+    }
+    #product1 .pro {
+        margin: 15px;
+    }
+    #sm-banner .banner-box {
+        min-width: 100%;
+        height: 30vh;
+    }
+    #banner3 {
+        padding: 0 40px;
+    }
+    #banner3 .banner-box {
+        width: 30%;
+    }
+    #newsletter .form {
+        display: flex;
+        width: 70%;
+    }
+}
+@media (max-width:477px) {
+    .section-p1 {
+        padding: 20px;
+    }
+    #header {
+    
+        padding: 10px 30px;
+    }
+    #heroFrame {
+        padding: 0 20px;
+        background-position: 55%;
+    }
+    h2 {
+        font-size: 32px;
+    }
+    h1{
+        font-size: 38px;
+    }
+    #feature{
+        justify-content: space-between;
+    }
+    #feature .fe-box{
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #feature .fe-box2{
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #feature .fe-box3{
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #feature .fe-box4{
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #feature .fe-box5{
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #feature .fe-box6{
+        width: 155px;
+        margin: 0 0 15px 0;
+    }
+    #product1 .pro {
+        width: 100%;
+    }
+    #sm-banner .banner-box{
+        height: 40vh;
+    }
+    #sm-banner .banner-box2 {
+        margin-top: 20px;
+    }
+    #banner3 {
+        padding: 0 20px;
+    }
+    #banner .banner-box{
+        width: 100%;
+    }
+    #newsletter .form {
+        width: 100%;
+    }
+    #newsletter {
+        padding: 40px 20px;
+    }
+    * {
+        margin: 0 0 0 0;
     }
 }
